hphp/hack/test/typecheck/new_inference/eager_solve/circular_bug_2.php.like_types.exp
File "circular_bug_2.php", line 9, characters 16-25:
  There are remaining unsolved constraints!: FALSE
File "circular_bug_2.php", line 27, characters 5-39:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "circular_bug_2.php", line 31, characters 5-45:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
